--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1799,7 +1799,7 @@ body {
   line-height: 1.5;
   color: #343a40;
   text-align: left;
-  background-color: #fff; }
+  background-color: #000000; }
 
 [tabindex="-1"]:focus {
   outline: 0 !important; }
